# mydata_portal

./: .gitignore  README.md  redis-acl.txt
Runner/: Cargo.toml
Runner/src/: cmd_app.rs  main.rs
Worker/: Cargo.toml  sample_config.json
Worker/src/: config.rs  defines.rs  dm_api.rs  main.rs  redis_api.rs
Worker/src/beamline_controls/: mod.rs
Worker/src/command_protocols/: mod.rs
Worker/src/config/: mod.rs
backend/: Cargo.toml  README.md
backend/runner_apps/: xrf_maps.yaml  xrf_maps.yml
backend/src/: appstate.rs  auth.rs  database.rs  main.rs  schema.rs  sse.rs
backend/src/auth/: mod.rs
backend/src/beamline_controls/: mod.rs
backend/src/database/models/: mod.rs
backend/src/database/schema/: mod.rs
beamline_worker/: Cargo.toml  sample.env  sample_config.json
beamline_worker/src/: beamline_controls.rs  config.rs  epics.rs  lib.rs  main.rs  redis_sink.rs  xrf_stream.rs
beamline_worker/src/beamline_controls/: mod.rs
beamline_worker/src/command_protocols/: mod.rs
database/sql/: 000_create_beamlines.sql  000_create_bio_sample_conditions.sql  000_create_bio_sample_fixatives.sql  000_create_bio_sample_types.sql  000_create_datastore.sql  000_create_experiment_roles.sql  000_create_proposals.sql  000_create_sample_origins.sql  000_create_sample_sources.sql  000_create_sample_sub_origins.sql  000_create_syncotron_runs.sql  000_create_user_access_control.sql  000_create_user_types.sql  001_create_beamlines.sql  001_create_bio_sample_fixations.sql  001_create_users.sql  002_create_beamline_contacts.sql  002_create_bio_sample_type_origin_sub_origin_links.sql  002_create_datasets.sql  002_create_users.sql  003_create_analysis.sql  003_create_beamline_contacts.sql  003_create_bio_samples.sql  003_create_experimenter_proposal_links.sql  003_create_experimenters.sql  003_create_proposal_dataset_links.sql  004_create_bio_sample_dataset_links.sql  004_create_syncotron_runs.sql  005_create_scan_type.sql  006_create_datastore.sql  007_create_datasets.sql  008_create_experiment_roles.sql  009_create_dataset_user_relations.sql  010_create_analysis.sql  100_insert_bio_sample_conditions.sql  100_insert_bio_sample_fixatives.sql  100_insert_bio_sample_types.sql  100_insert_sample_origins.sql  100_insert_sample_sources.sql  100_insert_sample_sub_origins.sql  (+36 more)
defines/: Cargo.toml
defines/src/: lib.rs
frontend/: .gitignore  README.md  esbuild.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: auth.ts  beamline.ts  cookies.ts  footer.ts  general-helper.ts  header.ts  index.ts  intro_anim.ts  left-sidebar.ts  login.ts  profile.ts  proposals-index.ts  proposals.ts  sample_info.ts  samples-index.ts  samples.ts  sse.ts  store.ts  table.ts  theme.ts  toast.ts  xrf-map-plot.ts
frontend/src/routes/: +layout.svelte  +page.svelte  Auth.svelte  Header.svelte
frontend/static/: beamline.css  beamline.html  index.html  main.css  profile.html  proposals.html  sample_form.css  samples.html  test.html  test_data.json  toast.css  xrf_anim.css
frontend/static/breamline/: index.html
frontend/static/datasets/: index.html
frontend/static/proposals/: index.html
runner/: Cargo.toml  xrf_maps_app.jaon
runner/src/: cmd_app.rs  main.rs
worker/: .gitignore  sample_config.json
worker/src/: defines.rs
worker/src/beamline_controls/: mod.rs
