[package]
name = "mydata-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defines = { path = "../defines" }
axum = { version = "0.8.4", features = ["tracing"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
jsonwebtoken = "9.3"
once_cell = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "1.0", features = [] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ldap3 = "0.11.4"
bb8 = "0.8.6"
diesel = { version = "2", features = ["chrono"] }
diesel-async = { version = "0.5.2", features = ["postgres", "bb8"] }
futures = "0.3"
headers = "0.4"
axum-macros = "0.5.0"
chrono = {version = "0.4.41", features = ["serde"]}
redis = {version = "0.32.5", features = ["tokio-comp"]}
