[package]
name = "beamline_worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defines = { path = "../defines" }
reqwest = "0.11"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1", features = ["full"] }
zmq = "0.10.0"
redis = { version = "0.27.5", features = ["tokio-comp"] }
clap = { version = "4.5.38", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
epics-ca = "0.1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"

[profile.release]
opt-level = 3
