[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_with = "3.11.0"
serde = { version ="1.0.214", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] } 
serde_yaml = "0.9.34"
